--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,11 +1,3 @@
-# -------- Builder stage --------
-FROM python:3.12-slim AS builder
-
-WORKDIR /app
-
-COPY requirements.txt .
-RUN pip install --user --no-cache-dir -r requirements.txt
-
 # -------- Runtime stage --------
 FROM python:3.12-slim
 
@@ -14,16 +6,19 @@ WORKDIR /app
 # Create non-root user
 RUN useradd -m appuser
 
-USER appuser
-
-# Copy dependencies from builder
+# Copy dependencies
 COPY --from=builder /root/.local /home/appuser/.local
-
 ENV PATH=/home/appuser/.local/bin:$PATH
 
-# Copy application code
+# Copy application code AND tests
 COPY app app
+COPY tests tests
 COPY run.py .
+
+# Fix ownership for non-root user
+RUN chown -R appuser:appuser /app
+
+USER appuser
 
 EXPOSE 5000
 
