Fix Docker multi-stage builder reference

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,3 +1,11 @@
+# -------- Builder stage --------
+FROM python:3.12-slim AS builder
+
+WORKDIR /app
+
+COPY requirements.txt .
+RUN pip install --user --no-cache-dir -r requirements.txt
+
 # -------- Runtime stage --------
 FROM python:3.12-slim
 
@@ -5,7 +13,7 @@ WORKDIR /app
 
 RUN useradd -m appuser
 
-# Copy dependencies
+# Copy dependencies from builder stage
 COPY --from=builder /root/.local /home/appuser/.local
 ENV PATH=/home/appuser/.local/bin:$PATH
 
@@ -14,10 +22,10 @@ COPY app app
 COPY tests tests
 COPY run.py .
 
-# Ensure Python can find the app package
+# Ensure Python can locate the app package
 ENV PYTHONPATH=/app
 
-# Fix permissions
+# Fix permissions for non-root user
 RUN chown -R appuser:appuser /app
 
 USER appuser
