--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,16 +14,17 @@ jobs:
     - name: Checkout source code
       uses: actions/checkout@v4
 
-    - name: Trivy scan (backend image)
-      uses: aquasecurity/trivy-action@master
-      with:
-          image-ref: capstone-backend
-          severity: CRITICAL,HIGH
-          exit-code: 0
-
     - name: Build backend image
       run: docker build -t capstone-backend ./backend
 
+    - name: Trivy scan backend image
+      uses: aquasecurity/trivy-action@master
+      with:
+        image-ref: capstone-backend:staging
+        format: table
+        severity: CRITICAL,HIGH
+        exit-code: 0
+        
     - name: Build frontend image
       run: docker build -t capstone-frontend ./frontend
 
