--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,14 +17,21 @@ jobs:
     - name: Build backend image
       run: docker build -t capstone-backend ./backend
 
+    - name: Install Trivy
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y wget
+        wget https://github.com/aquasecurity/trivy/releases/latest/download/trivy_0.68.1_Linux-64bit.deb
+        sudo dpkg -i trivy_0.68.1_Linux-64bit.deb
+
     - name: Trivy scan backend image
-      uses: aquasecurity/trivy-action@master
-      with:
-        image-ref: capstone-backend:staging
-        format: table
-        severity: CRITICAL,HIGH
-        exit-code: 0
-        
+      run: |
+        trivy image capstone-backend:staging \
+          --severity HIGH,CRITICAL \
+          --no-progress \
+          --exit-code 0
+
+
     - name: Build frontend image
       run: docker build -t capstone-frontend ./frontend
 
