--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
         tags: capstone-backend:staging
         load: true
 
-        
+
     - name: Install Trivy
       run: |
         sudo apt-get update
@@ -46,7 +46,7 @@ jobs:
       run: docker build -t capstone-frontend ./frontend
 
     - name: Run backend unit tests
-      run: docker run --rm capstone-backend pytest tests -v
+      run: docker run --rm capstone-backend:staging pytest tests -v
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
