--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,3 +51,18 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
   
+    - name: Docker Hub login
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+    - name: Tag & push backend image
+      run: |
+        docker tag capstone-backend ${{ secrets.DOCKERHUB_USERNAME }}/capstone-backend:staging
+        docker push ${{ secrets.DOCKERHUB_USERNAME }}/capstone-backend:staging
+
+    - name: Tag & push frontend image
+      run: |
+        docker tag capstone-frontend ${{ secrets.DOCKERHUB_USERNAME }}/capstone-frontend:staging
+        docker push ${{ secrets.DOCKERHUB_USERNAME }}/capstone-frontend:staging
