--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,10 +59,5 @@ jobs:
 
     - name: Tag & push backend image
       run: |
-        docker tag capstone-backend ${{ secrets.DOCKERHUB_USERNAME }}/capstone-backend:staging
+        docker tag capstone-backend:staging ${{ secrets.DOCKERHUB_USERNAME }}/capstone-backend:staging
         docker push ${{ secrets.DOCKERHUB_USERNAME }}/capstone-backend:staging
-
-    - name: Tag & push frontend image
-      run: |
-        docker tag capstone-frontend ${{ secrets.DOCKERHUB_USERNAME }}/capstone-frontend:staging
-        docker push ${{ secrets.DOCKERHUB_USERNAME }}/capstone-frontend:staging
